# file-uploader

./: .env.example  .flake8  .pre-commit-config.yaml  Dev.Dockerfile  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
file_uploader/: alembic.ini  main.py
file_uploader/api/: __init__.py  deps.py  routes.py
file_uploader/api/v1/: __init__.py  delete_files.py  get_event_files.py  get_files.py  upload_files.py
file_uploader/crud/: __init__.py  files.py
file_uploader/db/: __init__.py  db.py
file_uploader/enums/: FileOwnerTypes.py  __init__.py
file_uploader/logging/: __init__.py  logger.py
file_uploader/migrations/: env.py
file_uploader/migrations/versions/: 2023_03_05_0645-8e358a7c877f_initial_migration.py
file_uploader/models/: __init__.py  attached_file.py  base.py
file_uploader/schemas/: __init__.py  upload_responses.py
file_uploader/services/: __init__.py  add_user_avatar.py
file_uploader/settings/: __init__.py  settings.py
file_uploader/utils/: __init__.py  save_file.py
